fix header menu z-index

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -23,7 +23,7 @@
   flex-wrap: nowrap;
   justify-content: space-around;
   align-items: center;
-  z-index: 10;
+  z-index: 100;
 }
 
 .header__container.sticky {
